--- a/assets/css/ud-styles.css
+++ b/assets/css/ud-styles.css
@@ -4,7 +4,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&display=swap");
 :root {
   --font: "Inter", sans-serif;
-  --body-color: #637381;
+  --body-color: #f97316;
   --heading-color: #212b36;
   --primary-color: #f97316;
   --white: #ffffff;
